--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">WritingBoard</string>
+    <string name="settings">Settings</string>
+    <string name="allow_multiple_lines">Allow multiple lines at end.\n(more than one lines)</string>
+    <string name="clean_all_texts_button">Show clean all texts button.</string>
+    <string name="edit_writingboard_button">Show edit WritingBoard button.\n(Only allow click to edit)</string>
+    <string name="language">Language (Android 13+)\nOpen system Settings to change.</string>
 </resources>
