--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -5,5 +5,9 @@
     <string name="allow_multiple_lines">允許末尾有多個換行符\n(多於一個換行符)</string>
     <string name="clean_all_texts_button">顯示刪除所有文本按鈕</string>
     <string name="edit_writingboard_button">顯示編輯書寫板按鈕\n(僅允許點擊按鈕編輯)</string>
-    <string name="language">語言 (Android 13+)\n打開系統設置進行更改</string>
+    <string name="language">語言 (Android 13+)\n單擊以打開App系統設置進行更改</string>
+    <string name="small">小號</string>
+    <string name="medium">中號</string>
+    <string name="large">大號</string>
+    <string name="choose_font_size">選擇字體大小</string>
 </resources>
