--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -3,11 +3,22 @@
     <string name="app_name">书写板</string>
     <string name="settings">设置</string>
     <string name="allow_multiple_lines">允许末尾有多个换行符\n(多于一个换行符)</string>
+    <string name="clean_pointer_focus">键盘收起时清除键盘指针焦点</string>
     <string name="clean_all_texts_button">显示删除所有文本按钮</string>
     <string name="edit_writingboard_button">显示编辑书写板按钮\n(仅允许点击按钮编辑)</string>
     <string name="language">语言 (Android 13+)\n点击以打开应用设置进行更改</string>
-    <string name="small">小号</string>
-    <string name="medium">中号</string>
-    <string name="large">大号</string>
-    <string name="choose_font_size">选择字体大小</string>
+    <string name="small">小号字体</string>
+    <string name="medium">中号字体</string>
+    <string name="large">大号字体</string>
+    <string name="choose_font_size">选择书写板字体大小</string>
+    <string name="light_color">浅色主题</string>
+    <string name="theme_default">默认主题</string>
+    <string name="distinct">鲜明主题</string>
+    <string name="choose_theme">选择书写板软件主题</string>
+    <string name="monospace">等宽</string>
+    <string name="serif">衬线</string>
+    <string name="cursive">草书</string>
+    <string name="font_default">默认</string>
+    <string name="font_style">选择书写板字体样式 (仅英文字体)</string>
+    <string name="font_italics">启用斜体书写板字体样式</string>
 </resources>
