--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,21 +3,25 @@
     <string name="settings">Settings</string>
     <string name="allow_multiple_lines">Allow multiple lines at end.\n(more than one lines)</string>
     <string name="clean_pointer_focus">Clean pointer focus when\nkeyboard is retracted.</string>
-    <string name="clean_all_texts_button">Show clean all texts button.</string>
-    <string name="edit_writingboard_button">Show edit WritingBoard button.\n(Only allow click to edit)</string>
+    <string name="clean_all_texts_button">Clean all texts button.</string>
+    <string name="edit_writingboard_button">Edit WritingBoard button.\n(Only allow click to edit)</string>
     <string name="language">Language (Android 13+)\nClick to open AppSettings to change.</string>
     <string name="small">Small</string>
     <string name="medium">Medium</string>
     <string name="large">Large</string>
-    <string name="choose_font_size">Choose WritingBoard font size</string>
+    <string name="choose_font_size">WritingBoard font size</string>
     <string name="light_color">Light Color</string>
     <string name="theme_default">Default</string>
     <string name="distinct">Distinct</string>
-    <string name="choose_theme">Choose WritingBoard app theme</string>
+    <string name="choose_theme">WritingBoard app theme</string>
     <string name="monospace">Mono-\nspace</string>
     <string name="serif">Serif</string>
     <string name="cursive">Cursive</string>
     <string name="font_default">Default</string>
-    <string name="font_style">Choose WritingBoard font Style</string>
+    <string name="font_style">WritingBoard font Style</string>
     <string name="font_italics">Enable italic \nWritingBoard font style</string>
+    <string name="writingboard_app">WritingBoard App</string>
+    <string name="writingboard">The WritingBoard</string>
+    <string name="keyboard_texts_action"><![CDATA[Keyboard & Texts Action]]></string>
+    <string name="others">Others</string>
 </resources>
