--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">WritingBoard</string>
     <string name="settings">Settings</string>
     <string name="allow_multiple_lines">Allow save multiple lines at end.\n(more than one lines)</string>
     <string name="clean_pointer_focus">Clean pointer focus when\nkeyboard is retracted.</string>
-    <string name="clean_all_texts_button">Clean all texts button.</string>
-    <string name="edit_writingboard_button">Edit WritingBoard button.\n(Only allow click to edit)</string>
-    <string name="language">Language (Android 13+)\nClick to open AppSettings to change.</string>
+    <string name="clean_all_texts_button">Clean all texts button</string>
+    <string name="edit_writingboard_button">Edit WritingBoard button\n(Only allow click to edit)</string>
+    <string name="language">Language (Android 13+)\nClick to open AppSettings to change</string>
     <string name="small">Small</string>
     <string name="medium">Medium</string>
     <string name="large">Large</string>
@@ -24,10 +24,15 @@
     <string name="writingboard">The WritingBoard</string>
     <string name="keyboard_texts_action"><![CDATA[Keyboard & Texts Action]]></string>
     <string name="others">Others</string>
-    <string name="about">About \ngithub.com/Z-Siqi/WrtingBoard/</string>
+    <string name="about">About WritingBoard \ngithub.com/Z-Siqi/WrtingBoard/</string>
     <string name="button_style">WritingBoard button style</string>
     <string name="button_hide">Hide</string>
     <string name="button_default">Default</string>
     <string name="button_manual">Click the red area to open setting screen.</string>
     <string name="edit_button_manual">Click the purple area to edit WritingBoard texts.</string>
+    <string name="easter_eggs">To All People Who Found Here:\nCongratulations, you find the easter eggs!\n\nHave a good day!!</string>
+    <string name="may_all_people_equal">May all people view any group with equal eyes.</string>
+    <string name="to_the_special_you"><![CDATA[To the Special You 🏳️‍⚧️:\nDon’t surrender to anxiety and depression, There will eventually be a place for us in this world.\nPlease do not despair, there is always someone standing by your side.\n\n - text by MtF.wiki & Z-Siqi]]></string>
+    <string name="may_everyone">May everyone live freely under the sun.</string>
+    <string name="see_easter_egg_again" tools:ignore="Typos">If you wanna see the Easter egg again or wanna see it again when you feel sad or bad, \nplease enter _-OPEN_IT at end of text and click the Done button.</string>
 </resources>
