--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="small">Small</string>
     <string name="medium">Medium</string>
     <string name="large">Large</string>
-    <string name="choose_font_size">WritingBoard font size</string>
+    <string name="font_size">WritingBoard font size</string>
     <string name="light_color">Light Color</string>
     <string name="theme_default">Default</string>
     <string name="distinct">Distinct</string>
@@ -35,4 +35,9 @@
     <string name="to_the_special_you"><![CDATA[To the Special You 🏳️‍⚧️:\nDon’t surrender to anxiety and depression, There will eventually be a place for us in this world.\nPlease do not despair, there is always someone standing by your side.\n\n - text by MtF.wiki & Z-Siqi]]></string>
     <string name="may_everyone">May everyone live freely under the sun.</string>
     <string name="see_easter_egg_again" tools:ignore="Typos">If you wanna see the Easter egg again or wanna see it again when you feel sad or bad, \nplease enter _-OPEN_IT at end of text and click the Done button.</string>
+    <string name="font_weight">WritingBoard font weight</string>
+    <string name="thin">Thin</string>
+    <string name="normal">Normal</string>
+    <string name="thick">Thick</string>
+    <string name="disable_auto_save">Disable auto save text. Default:\n"After changes 2.5s auto save"</string>
 </resources>
