--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="button_style">WritingBoard button style</string>
     <string name="button_hide">Hide</string>
     <string name="button_default">Default</string>
+    <string name="button_bottom_bar">Bottom Bar</string>
     <string name="button_manual">Click the red area to open setting screen.</string>
     <string name="edit_button_manual">Click the purple area to edit WritingBoard texts.</string>
     <string name="easter_eggs">To All People Who Found Here:\nCongratulations, you find the easter eggs!\n\nHave a good day!!</string>
