--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,7 @@
     <string name="normal">Normal</string>
     <string name="thick">Thick</string>
     <string name="disable_auto_save">Disable auto save text. Default:\n"After changes 2.5s auto save"</string>
+    <string name="lower_than_android13">Your system version is lower than Android 13</string>
+    <string name="feature_supports_android13">This feature only supports Android 13+</string>
+    <string name="back">Go Back</string>
 </resources>
