--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="theme_default">Default</string>
     <string name="distinct">Distinct</string>
     <string name="choose_theme">WritingBoard app theme</string>
-    <string name="monospace">Mono-\nspace</string>
+    <string name="monospace">Monospace</string>
     <string name="serif">Serif</string>
     <string name="cursive">Cursive</string>
     <string name="font_default">Default</string>
