--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <string name="used_language">EN</string>
     <string name="app_name">WritingBoard</string>
+    <string name="default_string">Default</string>
     <string name="settings">Settings</string>
     <string name="allow_multiple_lines">Allow save multiple lines at end.\n(more than one lines)</string>
     <string name="clean_pointer_focus">Clean pointer focus when\nkeyboard is retracted.</string>
@@ -12,13 +13,11 @@
     <string name="large">Large</string>
     <string name="font_size">WritingBoard font size</string>
     <string name="light_color">Light Color</string>
-    <string name="theme_default">Default</string>
     <string name="distinct">Distinct</string>
     <string name="choose_theme">WritingBoard app theme</string>
     <string name="monospace">Monospace</string>
     <string name="serif">Serif</string>
     <string name="cursive">Cursive</string>
-    <string name="font_default">Default</string>
     <string name="font_style">WritingBoard font Style</string>
     <string name="font_italics">Enable italic \nWritingBoard font style</string>
     <string name="writingboard_app">WritingBoard App</string>
@@ -28,7 +27,6 @@
     <string name="about">About WritingBoard \ngithub.com/Z-Siqi/WrtingBoard/</string>
     <string name="button_style">WritingBoard button style</string>
     <string name="button_hide">Hide</string>
-    <string name="button_default">Default</string>
     <string name="button_bottom_bar">Bottom Bar</string>
     <string name="button_manual">Click the red area to open setting screen.</string>
     <string name="edit_button_manual">Click the purple area to edit WritingBoard texts.</string>
@@ -46,4 +44,7 @@
     <string name="feature_supports_android13">This feature only supports Android 13+</string>
     <string name="back">Go Back</string>
     <string name="always_visible_text">Prevent text\nfrom being obscured</string>
+    <string name="vibrate_settings">Vibration feedback</string>
+    <string name="disable">Disable</string>
+    <string name="more">More</string>
 </resources>
