--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -2,6 +2,9 @@
 <resources>
     <string name="used_language">CN</string>
     <string name="app_name">书写板</string>
+    <string name="widget_textonly">书写板 - 纯文本</string>
+    <string name="widget_description">书写板小部件</string>
+    <string name="widget_textonly_description">书写板纯文本小部件</string>
     <string name="default_string">默认</string>
     <string name="settings">设置</string>
     <string name="allow_multiple_lines">允许末尾有多个换行符\n(多于一个换行符)</string>
