--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="used_language">TW</string>
+    <string name="used_language">TW</string> <!-- DO NOT TRANSLATE IT -->
     <string name="app_name">寫字板</string>
     <string name="widget_textonly">寫字板 - 純文字</string>
     <string name="widget_description">寫字板小部件</string>
@@ -51,4 +51,11 @@
     <string name="vibrate_settings">震動回饋</string>
     <string name="disable">停用</string>
     <string name="more">更多</string>
+    <string name="Add_QS_Tile">新增快速設定圖塊 \n點擊磁貼以開啟應用程式</string>
+    <string name="TILE_ADD_REQUEST_NO_SUPPORT">不支援! \n請跟隨下面: \n1,向下滑動以開啟“快速設定”面板。\n2,點選編輯按鈕。\n3,找到應用程式圖塊。\n4,按住圖塊並將其拖曳到活動圖塊清單中。</string>
+    <string name="TILE_ADD_REQUEST_0">瓷磚未添加，但已發送請求</string>
+    <string name="TILE_ADD_REQUEST_1">已經加入</string>
+    <string name="TILE_ADD_REQUEST_2">瓷磚已添加</string>
+    <string name="language_no_support">Android13以下不支援語言設定 \n請嘗試更新您的系統!</string>
+    <string name="request_widget">添加書寫板小工具</string>
 </resources>
