--- a/app/src/main/res/values-zh-rSG/strings.xml
+++ b/app/src/main/res/values-zh-rSG/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="used_language">CN</string>
+    <string name="used_language">CN</string> <!-- DO NOT TRANSLATE IT -->
     <string name="app_name">WritingBoard</string>
     <string name="widget_textonly">WritingBoard - 仅文本</string>
     <string name="widget_description">WritingBoard 小部件</string>
@@ -48,6 +48,14 @@
     <string name="feature_supports_android13">此功能仅支持Android 13+</string>
     <string name="back">返回</string>
     <string name="always_visible_text">防止文本被遮挡</string>
+    <string name="vibrate_settings">震动反馈</string>
     <string name="disable">禁用</string>
     <string name="more">较多</string>
+    <string name="Add_QS_Tile">添加快速设置图块 \n单击磁贴打开应用程序</string>
+    <string name="TILE_ADD_REQUEST_NO_SUPPORT">不支持! \n请跟随下方步骤: \n1,向下滑动以打开“快速设置”面板。\n2,点击编辑按钮。\n3,找到软件图块。\n4,按住图块并将其拖动到活动图块列表中。</string>
+    <string name="TILE_ADD_REQUEST_0">图块未添加，但已发送请求</string>
+    <string name="TILE_ADD_REQUEST_1">已经加入</string>
+    <string name="TILE_ADD_REQUEST_2">图块已添加</string>
+    <string name="language_no_support">Android13以下不支持语言设置 \n请尝试更新您的系统!</string>
+    <string name="request_widget">添加WritingBoard小部件</string>
 </resources>
