--- a/app/src/main/res/values-zh-rSG/strings.xml
+++ b/app/src/main/res/values-zh-rSG/strings.xml
@@ -43,7 +43,7 @@
     <string name="thin">细</string>
     <string name="normal">默认</string>
     <string name="thick">粗</string>
-    <string name="disable_auto_save">禁用自动保存文本，默认:\n"自动保存更改后文的本"</string>
+    <string name="disable_auto_save">禁用自动保存文本</string>
     <string name="lower_than_android13">您的系统版本低于Android 13</string>
     <string name="feature_supports_android13">此功能仅支持Android 13+</string>
     <string name="back">返回</string>
@@ -52,10 +52,14 @@
     <string name="disable">禁用</string>
     <string name="more">较多</string>
     <string name="Add_QS_Tile">添加快速设置图块 \n单击磁贴打开应用程序</string>
-    <string name="TILE_ADD_REQUEST_NO_SUPPORT">不支持! \n请跟随下方步骤: \n1,向下滑动以打开“快速设置”面板。\n2,点击编辑按钮。\n3,找到软件图块。\n4,按住图块并将其拖动到活动图块列表中。</string>
-    <string name="TILE_ADD_REQUEST_0">图块未添加，但已发送请求</string>
+    <string name="TILE_ADD_REQUEST_NO_SUPPORT">不支持Android 13以下的系统!</string>
+    <string name="TILE_ADD_REQUEST_0">未检测到或未添加</string>
     <string name="TILE_ADD_REQUEST_1">已经加入</string>
     <string name="TILE_ADD_REQUEST_2">图块已添加</string>
     <string name="language_no_support">Android13以下不支持语言设置 \n请尝试更新您的系统!</string>
     <string name="request_widget">添加WritingBoard小部件</string>
+    <string name="text_only">仅文本</string>
+    <string name="opt_edit_text">优化软键盘遮挡文本时 \n编辑文本的问题</string>
+    <string name="not_support">Android 13 以下不允许通过应用程序添加 QS 磁贴! \n\n请按照以下方式添加: \n1, 向下滑动以打开“快速设置”面板。\n2, 点击编辑按钮。\n3, 找到软件图块。\n4, 按住图块并将其拖动到活动图块列表中。</string>
+    <string name="dismiss">Dismiss</string>
 </resources>
