--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,7 +60,7 @@
     <string name="language_no_support">Language setting is not support below Android13 \nPlease try to update your system!</string>
     <string name="request_widget">Add WritingBoard Widget</string>
     <string name="text_only">Text Only</string>
-    <string name="opt_edit_text">Optimization edit text when \ntext occlusion by soft keyboard</string>
+    <string name="opt_edit_text">Back to last version of edit optimize</string>
     <string name="not_support">Add QS Tile by app not allow below Android 13! \n\nPlease follow below to add: \n1, Swipe down to open the Quick Settings panel.\n2, Tap the edit button.\n3, Find the app tile.\n4, Hold down the tile and drag it to the list of active tiles.</string>
     <string name="dismiss">Dismiss</string>
 </resources>
