--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="widget_textonly">WritingBoard - Text Only</string>
     <string name="widget_description">WritingBoard widget</string>
     <string name="widget_textonly_description">WritingBoard text only widget</string>
+    <string name="loading" tools:ignore="TypographyEllipsis">Loading...</string>
     <string name="default_string">Default</string>
     <string name="settings">Settings</string>
     <string name="allow_multiple_lines">Allow save multiple lines at end.\n(more than one lines)</string>
