--- a/app/src/main/res/values-v31/strings.xml
+++ b/app/src/main/res/values-v31/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <!-- Don't care this -->
     <string name="used_language">EN</string>
+    <string name="app_name">WritingBoard</string>
 </resources>
