--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -27,9 +27,10 @@
     <string name="font_italics">启用斜体书写板字体样式</string>
     <string name="writingboard_app">书写板应用</string>
     <string name="writingboard">书写板</string>
-    <string name="keyboard_texts_action">键盘和文本行为</string>
+    <string name="keyboard_texts_action">文本行为</string>
     <string name="others">其它</string>
-    <string name="about">关于\ngithub.com/Z-Siqi/WrtingBoard/</string>
+    <string name="about">关于</string>
+    <string name="about_app">关于书写板\ngithub.com/Z-Siqi/WrtingBoard/</string>
     <string name="button_style">书写板按钮风格</string>
     <string name="button_hide">隐藏</string>
     <string name="button_bottom_bar">导航栏</string>
@@ -60,7 +61,6 @@
     <string name="language_no_support">Android13以下不支持语言设置 \n请尝试更新您的系统!</string>
     <string name="request_widget">添加书写板小部件</string>
     <string name="text_only">仅文本</string>
-    <string name="opt_edit_text">回到上个版本的编辑优化</string>
     <string name="not_support">Android 13 以下不允许通过应用程序添加 QS 磁贴! \n\n请按照以下方式添加: \n1, 向下滑动以打开“快速设置”面板。\n2, 点击编辑按钮。\n3, 找到软件图块。\n4, 按住图块并将其拖动到活动图块列表中。</string>
     <string name="dismiss">Dismiss</string>
 </resources>
