--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,9 +28,10 @@
     <string name="font_italics">Enable italic \nWritingBoard font style</string>
     <string name="writingboard_app">WritingBoard App</string>
     <string name="writingboard">The WritingBoard</string>
-    <string name="keyboard_texts_action"><![CDATA[Keyboard & Texts Action]]></string>
+    <string name="keyboard_texts_action">Texts Action</string>
     <string name="others">Others</string>
-    <string name="about">About WritingBoard \ngithub.com/Z-Siqi/WrtingBoard/</string>
+    <string name="about">About</string>
+    <string name="about_app">About WritingBoard \ngithub.com/Z-Siqi/WrtingBoard/</string>
     <string name="button_style">WritingBoard button style</string>
     <string name="button_hide">Hide</string>
     <string name="button_bottom_bar">Bottom Bar</string>
@@ -61,7 +62,6 @@
     <string name="language_no_support">Language setting is not support below Android13 \nPlease try to update your system!</string>
     <string name="request_widget">Add WritingBoard Widget</string>
     <string name="text_only">Text Only</string>
-    <string name="opt_edit_text">Back to last version of edit optimize</string>
     <string name="not_support">Add QS Tile by app not allow below Android 13! \n\nPlease follow below to add: \n1, Swipe down to open the Quick Settings panel.\n2, Tap the edit button.\n3, Find the app tile.\n4, Hold down the tile and drag it to the list of active tiles.</string>
     <string name="dismiss">Dismiss</string>
 </resources>
