--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -54,13 +54,16 @@
     <string name="disable">停用</string>
     <string name="more">更多</string>
     <string name="Add_QS_Tile">新增快速設定圖塊 \n點擊磁貼以開啟應用程式</string>
+    <string name="TILE_ADD_REQUEST_NotDetected">未檢測到，請再次嘗試單擊</string>
     <string name="TILE_ADD_REQUEST_NO_SUPPORT">不支援 Android 13 以下的系統!</string>
-    <string name="TILE_ADD_REQUEST_0">未偵測到或未添加</string>
+    <string name="REQUEST_IN_PROGRESS">請求正在進行</string>
+    <string name="TILE_ADD_REQUEST_0">未添加</string>
     <string name="TILE_ADD_REQUEST_1">已經加入</string>
     <string name="TILE_ADD_REQUEST_2">瓷磚已添加</string>
     <string name="language_no_support">Android13以下不支援語言設定 \n請嘗試更新您的系統!</string>
     <string name="request_widget">添加書寫板小工具</string>
     <string name="text_only">仅文本</string>
-    <string name="not_support">Android 13 以下不允許透過應用程式新增 QS 磁貼! \n\n請按照以下方式添加: \n1, 向下滑動以開啟“快速設定”面板。\n2, 點選編輯按鈕。\n3, 找到應用程式圖塊。\n4, 按住圖塊並將其拖曳到活動圖塊清單中。</string>
+    <string name="not_support">關閉</string>
+    <string name="not_support_detail">Android 13 以下不允許透過應用程式新增 QS 磁貼! \n\n請按照以下方式添加: \n1, 向下滑動以開啟“快速設定”面板。\n2, 點選編輯按鈕。\n3, 找到應用程式圖塊。\n4, 按住圖塊並將其拖曳到活動圖塊清單中。</string>
     <string name="dismiss">Dismiss</string>
 </resources>
