--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,8 @@
     <string name="widget_textonly_description">WritingBoard text only widget</string>
     <string name="loading" tools:ignore="TypographyEllipsis">Loading...</string>
     <string name="default_string">Default</string>
+    <string name="done">Done</string>
+    <string name="edit">Edit</string>
     <string name="settings">Settings</string>
     <string name="allow_multiple_lines">Allow save multiple lines at end.\n(more than one lines)</string>
     <string name="clean_pointer_focus">Clean pointer focus when\nkeyboard is retracted.</string>
@@ -54,6 +56,7 @@
     <string name="vibrate_settings">Vibration feedback</string>
     <string name="disable">Disable</string>
     <string name="more">More</string>
+    <string name="qs_tile">Quick Setting tile</string>
     <string name="Add_QS_Tile">Add Quick Setting Tile \nOpen the app by click the Tile</string>
     <string name="TILE_ADD_REQUEST_NotDetected">Not Detected, Try Click Again</string>
     <string name="TILE_ADD_REQUEST_NO_SUPPORT">Not support below Android 13!</string>
